--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="content">
             <p class="intro">Hi I Am <span>Neha Jangale</span></p>
             <h1>Web Developer</h1>
-            <p class="detail"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatibus et commodi nulla voluptates voluptatum excepturi alias similique aut quo.
+            <p class="detail"> Hello , I Am Neha. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatibus et commodi nulla voluptates voluptatum excepturi alias similique aut quo.
             </p>
             <div class="btn-container">
               <button>Hire Me</button>
