--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div class="content">
             <p class="intro">Hi I Am <span>Neha Jangale</span></p>
             <h1>Web Developer</h1>
-            <p class="detail"> Hello , I Am Neha. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptatibus et commodi nulla voluptates voluptatum excepturi alias similique aut quo.
-            </p>
+            <p class="detail"> Hello , I Am Neha Jangale.  Working on the web is my passion as I love to work on exciting projects. This is the field I get to express my creativity. </p>
             <div class="btn-container">
               <button>Hire Me</button>
               <button>View Project</button>
